added and refined the about and contact me page

--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -2,22 +2,22 @@
     <div class="about-box">
         <h6>About</h6>
         <article>
-            What to Eat is an initiative to make it easy and fun to start cooking. Have you found yourself wanting to
-            cook
-            but feeling very uninspired? Then What To eat is the perfect app for you. Very easily you can find a large
-            number of recipes and that too very easy!
-
-            We are a small team of dedicated developers who wish to see that the world starts eating in a more conscious
-            way. Cooking yourself is a great way to achieve this.
+            What to Eat is a modern web app designed to inspire people to cook more and live a healthier lifestyle.
+            Our goal is to make cooking simple, enjoyable, and accessible to everyone.
+            If you have ever felt uninspired in the kitchen, What to Eat is here to help you discover easy, delicious,
+            and healthy recipes for every occasion.
+            We are a passionate team of developers committed to promoting healthy eating habits
+            and a conscious approach to food. By cooking your own meals, you gain control over your nutrition
+            while also saving money and reducing food waste.
         </article>
     </div>
     <div class="about-box">
         <h6>Contact</h6>
         <article>
-            If you wish to get in contact with us you can send an email to us.
+            We would love to hear from you! For any inquiries, feedback, or suggestions,
+            please feel free to reach out to us via email at <strong>support&#64;whattoeat.com</strong>.
+            <!-- OBS! Detta är en felaktig email adress. Ska denna ligga kvar när vi publicerar? -->
+            Our dedicated team will respond as soon as possible.
         </article>
-    </div>
-    <div class="about-box">
-        <h6><a routerLink="/">Back to home</a></h6>
     </div>
 </div>
