--- a/apps/frontend-wte/src/app/components/footer/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div id="footer-container">
-    <h6><a routerLink="/about">About</a></h6>
-    <h6><a routerLink="/about">Contact us</a></h6>
+    <a routerLink="/about" class="footer-link">About</a>
+    <a routerLink="/about" class="footer-link">Contact Us</a>
+    <a routerLink="/privacy-policy" class="footer-link">Privacy Policy</a>
 </div>
