added copyright text and styling still not fully satisfied but looks ok

--- a/apps/frontend-wte/src/app/components/footer/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.html
@@ -2,3 +2,6 @@
     <a routerLink="/about" class="footer-link">About</a>
     <a routerLink="/privacy-policy" class="footer-link">Privacy Policy</a>
 </div>
+<div id="copyright-container">
+    <p>Copyright © Hedonix Technologies AB, 2024. All rights reserved</p>
+</div>
