--- a/apps/frontend-wte/src/app/components/footer/footer.component.scss
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.scss
@@ -28,3 +28,15 @@
 .footer-link:active {
   color: #003f88;
 }
+
+#copyright-container {
+  text-align: center;
+  padding: 1rem 0;
+  background-color: #f4f4f9;
+  font-size: 0.875rem;
+  color: #666;
+}
+
+#copyright-container p {
+  margin: 0;
+}
