added back to all recipies button

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -26,4 +26,7 @@
             <p>{{ recipe.cookingTime.hours }} hours {{ recipe.cookingTime.minutes }} minutes</p>
         </div>
     </div>
+    <div id="back-to-recipes-container">
+        <a id="back-to-recipes-btn" routerLink="/">Back to All Recipes</a>
+    </div>
 </div>
