--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.scss
@@ -90,14 +90,14 @@
 
 // Back to all recipes btn
 
-#back-to-recipe-btn {
+#back-to-recipes-container {
   text-align: center;
   margin-top: 2rem;
 }
 
-#back-to-recipe-btn a {
+#back-to-recipes-btn {
   display: inline-block;
-  padding: 0.5rem 1.5rem;
+  padding: 0.75rem 1.5rem;
   font-size: 1rem;
   font-weight: bold;
   color: #ffffff;
@@ -107,12 +107,12 @@
   transition: background-color 0.2s, transform 0.2s;
 }
 
-#back-to-recipe-btn a:hover {
+#back-to-recipes-btn:hover {
   background-color: #0056b3;
   transform: scale(1.05);
 }
 
-#back-to-recipe-btn a:active {
+#back-to-recipes-btn:active {
   background-color: #003f88;
   transform: scale(0.98);
 }
