--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.scss
@@ -4,12 +4,13 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
+  background-color: #f9f9f9;
 }
 
 .about-box {
   width: 100%;
   max-width: 40rem;
-  background-color: #f4f4f9;
+  background-color: #ffffff;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
