--- a/apps/frontend-wte/src/app/pages/privacy-page/privacy-page.component.html
+++ b/apps/frontend-wte/src/app/pages/privacy-page/privacy-page.component.html
@@ -2,55 +2,105 @@
     <div class="privacy-box">
         <h6>Privacy Policy</h6>
         <article>
-            <h2>1. Introduction</h2>
+            <b>Last updated December 18, 2024</b>
+            <h2>Introduction</h2>
             <p>
-                Welcome to "What to Eat". Your privacy is important to us, and we are committed to protecting the
-                personal
-                information you provide to us. This Privacy Policy outlines how we collect, use, and safeguard your
-                data.
+                This privacy policy is used by <b>Hedonix Technologies AB</b> (referred to as "we", "us" or "our") to
+                inform our users (referred to as "you", "your", "yours") of our website "What To Eat"
+                (referred to as "Website") how we collect, store, share and use (referred to as "process",
+                "processing") your personal data.
             </p>
 
-            <h2>2. Information We Collect</h2>
+            <h2>Purpose of processing</h2>
             <p>
-                We collect certain types of information to provide better services to all of our users. This includes:
+                Personal data is processed to the minimal extent required to fulfill legal obligations, handling
+                incoming inquiries and provide and protect our Website.
             </p>
+
+            <h2>Personal data and data subjects</h2>
+            <h3>Types of personal data</h3>
             <ul>
-                <li>Personal information such as your name, email address, and contact details.</li>
-                <li>Usage data such as the pages you visit, how long you stay, and your interactions with the website.
+                <li><b>E-mail address</b></li>
+                <li><b>Log and usage data.</b> Traffic data including IP address, timestamp, type of device, operating
+                    system and web browser type that is used.
                 </li>
             </ul>
-
-            <h2>3. How We Use Your Information</h2>
-            <p>
-                The information we collect is used for the following purposes:
-            </p>
+            <h3>Types of data subjects</h3>
             <ul>
-                <li>To provide and maintain the website and its services.</li>
-                <li>To improve the user experience and website functionality.</li>
-                <li>To communicate with you about updates, new features, and promotions.</li>
+                <li><b>User of our Website</b></li>
             </ul>
 
-            <h2>4. Sharing Your Information</h2>
+            <h2>When and how we process your data</h2>
             <p>
-                We do not sell or rent your personal information to third parties. We may share your information with
-                service providers who assist us in operating our website or delivering services to you.
+                We process your data when:
             </p>
 
-            <h2>5. Your Rights</h2>
-            <p>
-                You have the right to access, update, or delete your personal information at any time. To exercise your
-                rights, please contact us at <a href="mailto:privacy@whattoeat.com">privacy&#64;whattoeat.com</a>.
-            </p>
+            <h3>You contact us via our communication channels</h3>
+            <p>If you contact us via e-mail, we will use your contact information to respond/handle to your inquiry.</p>
+            <p><b>Legal basis:</b> Legitimate interest </p>
 
-            <h2>6. Changes to the Privacy Policy</h2>
-            <p>
-                We may update this Privacy Policy from time to time.
-            </p>
+            <h3>You visit and/or use our Website</h3>
+            <p>When accessing and/or using or Website our servers automatically collects log and usage data. We process
+                this data in order to diagnose issues with, prevent fraudulent behaviour in and protect against cyber
+                attacks against our Website.</p>
+            <p><b>Legal basis:</b> Performance of a contract, legitimate interest </p>
 
-            <h2>7. Contact Us</h2>
+            <h2>Third-Party Data Processors</h2>
             <p>
-                If you have any questions or concerns about this Privacy Policy, please contact us at
-                <a href="mailto:privacywhattoeat.com">privacy&#64;whattoeat.com</a>.
+                We may use third-party data processors to help us process your personal data as described above. These
+                third-party processors are bound by contractual obligations to only process your personal data in
+                accordance with our instructions and to implement appropriate technical and organizational measures to
+                protect your personal data.
+            </p>
+            <p>We may transfer your personal data to these third-party processors in order to carry out specific
+                processing activities, such as email correspondence, customer relationship management or website
+                analytics. In such cases, we will ensure that the third-party processor is GDPR-compliant and that
+                appropriate safeguards are in place to protect your personal data during the transfer.</p>
+
+            <h2>Links to other websites</h2>
+            <p>In the event that our website contains links to third-party websites published by a third party, then
+                these links are only for information purposes. As we have no control over the content of these websites
+                we are not responsible for their content. On the same basis, we are not responsible for any damages or
+                losses that may arise from the use of these links.</p>
+
+            <h2>Your rights</h2>
+            <h3>Access</h3>
+            <p>You have the right to request access to your personal data that is being processed by us. The information
+                will be free of charge, clearly worded in a electronic format.</p>
+
+            <h3>Rectification</h3>
+            <p>If your personal data is incomplete or otherwise incorrect we will after your request, without
+                unnecessary delay, rectify this personal data.</p>
+
+            <h3>Erasure</h3>
+            <p>When your personal data is no longer necessary for the purpose and legal basis it is processed we will,
+                without unnecessary delay, delete this personal data. This also applies if your personal data has been
+                processed in a unlawful way or must be deleted to fulfill legal obligations.</p>
+
+            <h3>Limitation of processing</h3>
+            <p>If you consider that your personal data is incorrect or unlawful you have the right to demand that we
+                limit the processing of this data until both parties has been given the opportunity to control if the
+                personal data is correct.</p>
+
+            <h3>Data portability</h3>
+            <p>You have the right to request your personal data in a structured, commonly used and machine readable
+                format based on the personal data that has been sent to us.</p>
+
+            <h3>Objection</h3>
+            <p>If you consider that your rights have not been respected by us, you can object by contacting us or the
+                Swedish Authority for Privacy Protection.</p>
+
+            <h2>How to contact us</h2>
+            <p>If you have any questions regarding this privacy policy or your personal data you can contact us at:</p>
+            <p><a href="mailto:privacywhattoeat.com">info&#64;hedonix.se</a></p>
+            <p>
+                <span>Hedonix Technologies AB</span>
+                <br>
+                <span>Bytaregatan 4D</span>
+                <br>
+                <span>222 21 Lund</span>
+                <br>
+                <span>Sweden</span>
             </p>
         </article>
     </div>
