Removed contact box from about page

--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -1,5 +1,5 @@
 <div id="about-container">
-    <div class="about-box">
+    <div id="about-box">
         <h6>About</h6>
         <article>
             What to Eat is a modern web app designed to inspire people to cook more and live a healthier lifestyle.
@@ -9,15 +9,6 @@
             We are a passionate team of developers committed to promoting healthy eating habits
             and a conscious approach to food. By cooking your own meals, you gain control over your nutrition
             while also saving money and reducing food waste.
-        </article>
-    </div>
-    <div class="about-box">
-        <h6>Contact</h6>
-        <article>
-            We would love to hear from you! For any inquiries, feedback, or suggestions,
-            please feel free to reach out to us via email at <strong>support&#64;whattoeat.com</strong>.
-            <!-- OBS! Detta är en felaktig email adress. Ska denna ligga kvar när vi publicerar? -->
-            Our dedicated team will respond as soon as possible.
         </article>
     </div>
 </div>
