Updated about text

--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -2,13 +2,22 @@
     <div id="about-box">
         <h6>About</h6>
         <article>
-            What to Eat is a modern web app designed to inspire people to cook more and live a healthier lifestyle.
-            Our goal is to make cooking simple, enjoyable, and accessible to everyone.
-            If you have ever felt uninspired in the kitchen, What to Eat is here to help you discover easy, delicious,
-            and healthy recipes for every occasion.
-            We are a passionate team of developers committed to promoting healthy eating habits
-            and a conscious approach to food. By cooking your own meals, you gain control over your nutrition
-            while also saving money and reducing food waste.
+            <p>
+                What to Eat is a modern web app designed to inspire people to cook more and live a healthier lifestyle.
+                We
+                offer an array of various vegetarian recipies inspired by the swedish and indian kitchens.
+            </p>
+            <p>
+                Our goal is to make cooking simple, enjoyable, and accessible to everyone.
+                If you have ever felt uninspired in the kitchen, What to Eat is here to help you discover easy,
+                delicious,
+                and healthy recipes for every occasion!
+            </p>
+            <p>
+                This application is created as part of an internship project. Our team is passionate about both IT,
+                tasty and healthy food and we want to help promoting healthy
+                eating habits and a conscious approach to food.
+            </p>
         </article>
     </div>
 </div>
