Updated privacy policy text

--- a/apps/frontend-wte/src/app/pages/privacy-page/privacy-page.component.html
+++ b/apps/frontend-wte/src/app/pages/privacy-page/privacy-page.component.html
@@ -43,7 +43,7 @@
             <p>When accessing and/or using or Website our servers automatically collects log and usage data. We process
                 this data in order to diagnose issues with, prevent fraudulent behaviour in and protect against cyber
                 attacks against our Website.</p>
-            <p><b>Legal basis:</b> Performance of a contract, legitimate interest </p>
+            <p><b>Legal basis:</b> Legitimate interest </p>
 
             <h2>Third-Party Data Processors</h2>
             <p>
