changed routing for homepage and recipe page

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -27,6 +27,6 @@
         </div>
     </div>
     <div id="back-to-recipes-container">
-        <a id="back-to-recipes-btn" routerLink="/">Back to All Recipes</a>
+        <a id="back-to-recipes-btn" routerLink="/recipes">Back to All Recipes</a>
     </div>
 </div>
