added a new header image and made styling for it

--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<div>
+<div id="header-container">
     <a routerLink="/" id="logo-link">
-        <img id="header-image" src="/assets/images/what-to-eat-logo2.png" alt="">
+        <img id="header-image" src="/assets/images/what-to-eat55.png" alt="What to Eat Logo">
     </a>
 </div>
