--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -17,11 +17,11 @@
             <a routerLink="/recipes" class="home-card-btn">View Recipes</a>
         </div>
 
-        <div class="home-card">
+        <!-- <div class="home-card">
             <h2>Random Recipe</h2>
             <p>Feeling adventurous? Get a surprise recipe to try out today!</p>
             <img src="/assets/images/random-recipe-icon.webp" alt="Random Recipe Icon" class="card-icon">
             <a routerLink="/generator" class="home-card-btn">Discover</a>
-        </div>
+        </div> -->
     </div>
 </div>
