--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -1,12 +1,22 @@
+#header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: #f9f9f9;
+}
+
 #header-image {
-  width: 100vw;
+  width: 80vw;
   max-width: 100%;
-  height: 50vh;
-  object-fit: cover;
+  height: 45vh;
+  object-fit: contain;
+  border-radius: 1rem;
 }
 
 @media screen and (max-width: 700px) {
   #header-image {
-    height: 30vh;
+    width: 70vw;
+    height: auto;
   }
 }
