--- a/apps/frontend-wte/src/app/components/footer/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <div id="footer-container">
-    <a routerLink="/about" class="footer-link">About</a>
-    <a routerLink="/privacy" class="footer-link">Privacy Policy</a>
-</div>
-<div id="copyright-container">
-    <p>Copyright © Hedonix Technologies AB, 2024. All rights reserved</p>
+    <div id="links-container">
+        <a routerLink="/about" class="footer-link">About</a>
+        <a routerLink="/privacy" class="footer-link">Privacy Policy</a>
+    </div>
+    <div id="copyright-container">
+        <p>Copyright © Hedonix Technologies AB, 2024. All rights reserved</p>
+    </div>
 </div>
