--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
@@ -11,8 +11,8 @@
 .recipe-box {
   width: 18rem;
   height: auto;
-  border-radius: 10px; /* Rundade hörn*/
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Skugga */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   background-color: #ffffff;
   display: flex;
