--- a/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
+++ b/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
@@ -9,7 +9,10 @@
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 }
 
-// FÅR INTE H2 i center..
+#recipe-header-name {
+  text-align: center;
+  font-size: 2.5rem;
+}
 
 #random-recipe-btn {
   display: inline-block;
