changed home page and header

--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -1,13 +1,4 @@
 <div id="home-container">
-    <div id="card-container">
-        <div class="home-card">
-            <img src="/assets/images/logos/generate-recipe-icon.webp" alt="Generate Recipe Icon" class="card-icon">
-            <a routerLink="/generator" class="home-card-btn">Generate Recipe</a>
-        </div>
-
-        <div class="home-card">
-            <img src="/assets/images/logos/full-recipe-icon.webp" alt="All Recipes Icon" class="card-icon">
-            <a routerLink="/recipes" class="home-card-btn">View All Recipes</a>
-        </div>
-    </div>
+    <a routerLink="/generator" id="generate-btn">Generate Recipe</a>
+    <a routerLink="/recipes" id="view-all-recipes-link">View All Recipes</a>
 </div>
