--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -1,22 +1,28 @@
 #header-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding: 1rem;
   background-color: #f9f9f9;
 }
 
+#logo-link {
+  display: inline-block;
+}
+
 #header-image {
-  width: 80vw;
-  max-width: 100%;
-  height: 45vh;
+  width: 10rem;
+  height: auto;
   object-fit: contain;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 
 @media screen and (max-width: 700px) {
+  #header-container {
+    justify-content: center; /* Center-align the header on mobile */
+  }
+
   #header-image {
-    width: 90vw;
-    height: auto;
+    width: 8rem; /* Slightly smaller logo size for mobile */
   }
 }
