--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
@@ -1,59 +1,52 @@
 #home-container {
   text-align: center;
-  padding: 2rem;
   background-color: #f9f9f9;
-}
-
-#card-container {
+  height: 100vh;
   display: flex;
   justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-}
-
-.home-card {
-  background-color: #ffffff;
-  border-radius: 0.5rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-  width: 15rem;
-  padding: 1rem;
-  text-align: center;
-  transition: transform 0.2s, box-shadow 0.2s;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
 }
 
-.home-card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-}
-
-.card-icon {
-  width: 8rem;
-  height: auto;
-  object-fit: contain;
-  margin-bottom: 1rem;
-}
-
-.home-card-btn {
-  display: inline-block;
-  padding: 0.5rem 1.5rem;
-  font-size: 1rem;
+#generate-btn {
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
   color: #ffffff;
   background-color: #007bff;
   border-radius: 0.5rem;
   text-decoration: none;
   transition: background-color 0.2s, transform 0.2s;
+  position: relative;
+  top: -15%;
 }
 
-.home-card-btn:hover {
+#generate-btn:hover {
   background-color: #0056b3;
   transform: scale(1.05);
 }
 
-.home-card-btn:active {
+#generate-btn:active {
   background-color: #003f88;
   transform: scale(0.98);
+}
+
+#view-all-recipes-link {
+  position: absolute;
+  bottom: 30%;
+  right: 5%;
+  font-size: 1rem;
+  color: #007bff;
+  text-decoration: underline;
+  transition: color 0.2s ease, transform 0.2s;
+}
+
+#view-all-recipes-link:hover {
+  color: #0056b3;
+  transform: scale(1.05);
+}
+
+#view-all-recipes-link:active {
+  color: #003f88;
 }
