--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -19,10 +19,10 @@
 
 @media screen and (max-width: 700px) {
   #header-container {
-    justify-content: center; /* Center-align the header on mobile */
+    justify-content: center;
   }
 
   #header-image {
-    width: 8rem; /* Slightly smaller logo size for mobile */
+    width: 8rem;
   }
 }
