--- a/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
+++ b/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
@@ -2,6 +2,8 @@
   width: 90%;
   max-width: 40rem;
   margin: 2rem auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
   text-align: center;
   background-color: #f9f9f9;
   border-radius: 0.5rem;
@@ -53,20 +55,15 @@
   object-fit: cover;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-
 @media screen and (max-width: 700px) {
   #generator-container {
     width: 95%;
     padding: 1.5rem;
+    margin-bottom: 10rem;
+  }
+
+  #footer-container {
+    margin-top: 2rem; /* Reduced margin for mobile */
   }
 
   #recipe-header-name {
