changed home page to render the generator component directly

--- a/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
+++ b/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
@@ -63,7 +63,7 @@
   }
 
   #footer-container {
-    margin-top: 2rem; /* Reduced margin for mobile */
+    margin-top: 2rem;
   }
 
   #recipe-header-name {
