--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,1 @@
-<div id="home-container">
-    <a routerLink="/generator" id="generate-btn">Generate Recipe</a>
-    <a routerLink="/recipes" id="view-all-recipes-link">View All Recipes</a>
-</div>
+<app-generator></app-generator>
