--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -2,4 +2,20 @@
     <a routerLink="/" id="logo-link">
         <img id="header-image" src="/assets/images/logos/what-to-eat-logo7.png" alt="What to Eat Logo">
     </a>
+
+    <nav id="navbar">
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" id="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <ul id="menu">
+            <li><a routerLink="/">Home</a></li>
+            <li><a routerLink="/generator">Generate Recipe</a></li>
+            <li><a routerLink="/recipes">All Recipes</a></li>
+            <li><a routerLink="/aryuveda">Aryuveda</a></li>
+            <li><a routerLink="/about">About</a></li>
+        </ul>
+    </nav>
 </div>
