--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -1,3 +1,4 @@
+/* Header container */
 #header-container {
   display: flex;
   justify-content: space-between;
@@ -8,6 +9,7 @@
   z-index: 1337;
 }
 
+/* Logo */
 #logo-link {
   display: inline-block;
 }
@@ -18,6 +20,7 @@
   object-fit: contain;
 }
 
+/* Navbar  */
 #navbar {
   position: relative;
 }
@@ -28,10 +31,10 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #f9f9f9;
+  background-color: #007bff; // Same blue colour as button
   padding: 1rem;
   border-radius: 0.5rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
   width: 12rem;
   list-style: none;
   margin: 0;
@@ -48,13 +51,14 @@
 
 #menu li a {
   text-decoration: none;
-  color: #007bff;
+  color: #fff;
   font-size: 1rem;
+  font-weight: bold;
   transition: color 0.2s ease;
 }
 
 #menu li a:hover {
-  color: #0056b3;
+  color: #ddd;
 }
 
 /* Hamburger menu toggle */
@@ -75,17 +79,23 @@
 #hamburger-menu span {
   display: block;
   height: 0.25rem;
-  background-color: #007bff;
+  background-color: #000;
   border-radius: 0.5rem;
   transition: all 0.3s ease;
 }
 
-/* Show the menu when toggled */
+/* Shows the menu when menu is toggled. */
 #menu-toggle:checked + #hamburger-menu + #menu {
-  display: flex; /* Show menu when checked */
+  display: flex;
 }
 
-/* Hamburger menu is always visible */
-#hamburger-menu {
-  display: flex;
+/* Mobile */
+@media screen and (max-width: 700px) {
+  #menu {
+    width: 8rem;
+  }
+
+  #menu li a {
+    font-size: 0.9rem;
+  }
 }
