--- a/apps/frontend-wte/src/styles.scss
+++ b/apps/frontend-wte/src/styles.scss
@@ -32,14 +32,23 @@
 
 // GLOBAL STYLING
 
-html {
-  font-size: 62, 5%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
+html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%; /* Full viewport height */
+  font-size: 62, 5%;
   font-family: 'opensans';
+}
+
+#app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
