--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -1,4 +1,3 @@
-/* Header container */
 #header-container {
   display: flex;
   justify-content: space-between;
@@ -9,7 +8,6 @@
   z-index: 1337;
 }
 
-/* Logo */
 #logo-link {
   display: inline-block;
 }
@@ -20,7 +18,6 @@
   object-fit: contain;
 }
 
-/* Navbar  */
 #navbar {
   position: relative;
 }
@@ -31,7 +28,7 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #007bff; // Same blue colour as button
+  background-color: #007bff;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
@@ -61,7 +58,6 @@
   color: #ddd;
 }
 
-/* Hamburger menu toggle */
 #menu-toggle {
   display: none;
 }
@@ -84,12 +80,12 @@
   transition: all 0.3s ease;
 }
 
-/* Shows the menu when menu is toggled. */
 #menu-toggle:checked + #hamburger-menu + #menu {
   display: flex;
 }
 
-/* Mobile */
+// När menu toggle är checked så ändras den till flex och blir då visable
+
 @media screen and (max-width: 700px) {
   #menu {
     width: 8rem;
