--- a/apps/frontend-wte/src/styles.scss
+++ b/apps/frontend-wte/src/styles.scss
@@ -36,7 +36,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%; /* Full viewport height */
+  height: 100%;
   font-size: 62, 5%;
   font-family: 'opensans';
 }
@@ -52,3 +52,5 @@ main {
   display: flex;
   flex-direction: column;
 }
+
+// Flex 1 ser till att den fyller ut all tom rum mellan headaer och footer vilket i detta fallet är main
