--- a/apps/frontend-wte/src/app/components/footer/footer.component.scss
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.scss
@@ -5,6 +5,9 @@
   border-top: 1px solid #e0e0e0;
   font-size: 0.75rem;
   width: 100%;
+  position: absolute;
+  bottom: 0;
+  height: 3rem;
 }
 
 #links-container {
