--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -1,4 +1,5 @@
 #header-container {
+  height: 8vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,7 +14,7 @@
 }
 
 #header-image {
-  width: 10rem;
+  width: 7rem;
   height: auto;
   object-fit: contain;
 }
