--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
@@ -1,3 +1,13 @@
+:root {
+  --full-height: 100vh;
+}
+
 #home-container {
-  min-height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  width: 100%;
+  min-height: var(--full-height);
+  overflow: hidden;
 }
