bug on the footer it stays in the same place all the time

--- a/apps/frontend-wte/src/app/components/footer/footer.component.scss
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.scss
@@ -10,6 +10,8 @@
   height: 3rem;
 }
 
+// FOOTER IS BUGGED. STAYS IN THE SAME PLACE ALL THE TIME!!!!!
+
 #links-container {
   display: flex;
   justify-content: center;
