--- a/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
+++ b/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
@@ -1,3 +1,9 @@
+:host {
+  margin: auto;
+}
+
+// Host är den osynliga diven som ligger runt komponenten.
+
 #generator-container {
   width: 90%;
   max-width: 40rem;
