--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.9rem;
-  background-color: #f9f9f9;
+  background-color: #8bc34a;
   position: relative;
   z-index: 1337;
 }
