--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.scss
@@ -3,7 +3,7 @@
   max-width: 50rem;
   margin: 2rem auto;
   border-radius: 1rem;
-  background-color: #ffffff;
+  background-color: #f1f8e9;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 2rem;
