--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 1rem;
   background-color: #f9f9f9;
+  height: 2.5rem;
   position: relative;
   z-index: 1337;
 }
@@ -14,35 +15,9 @@
 }
 
 #header-image {
-  width: 10rem;
+  width: 6rem;
   height: auto;
   object-fit: contain;
-}
-
-// Desktop navbar
-
-#desktop-navbar {
-  display: flex;
-}
-
-#desktop-menu {
-  display: flex;
-  list-style: none;
-  gap: 1.5rem;
-  margin: 0;
-  padding: 0;
-}
-
-#desktop-menu li a {
-  text-decoration: none;
-  color: #007bff;
-  font-size: 1rem;
-  font-weight: bold;
-  transition: color 0.3s ease;
-}
-
-#desktop-menu li a:hover {
-  color: #0056b3;
 }
 
 // Mobile navbar, hidden on desktop
@@ -52,7 +27,7 @@
 }
 
 #mobile-menu {
-  display: none;
+  display: none; // gömmer menyn (efter man tryckt på linjerna) som default.
   flex-direction: column;
   position: absolute;
   top: 100%;
@@ -101,6 +76,7 @@
   z-index: 1000;
 }
 
+// Styling of hamburger menu
 #hamburger-menu span {
   display: block;
   height: 0.25rem;
@@ -109,25 +85,20 @@
   transition: all 0.3s ease;
 }
 
-// Above is styling for the lines on the hamburger menu
-
-#menu-toggle:checked ~ #mobile-menu {
-  display: flex;
+// Toggle funktionalitet på MOBILE.
+#menu-toggle:checked + #hamburger-menu + #mobile-menu {
+  display: flex; /* Shows menu when checkbox is checked */
 }
 
-#mobile-navbar {
-  display: none; // gömmer hambruger menu i desktop.
+// Hover funktioalitet på DESKTOP.
+@media screen and (min-width: 801px) {
+  #hamburger-menu:hover + #mobile-menu,
+  #mobile-menu:hover {
+    display: flex;
+  }
 }
-
-// När menu toggle är checked så ändras den till flex och blir då visable
 
 @media screen and (max-width: 800px) {
-  /* Hide desktop navbar on mobile */
-  #desktop-navbar {
-    display: none;
-  }
-
-  /* Show mobile navbar on mobile */
   #mobile-navbar {
     display: block;
   }
