--- a/apps/frontend-wte/src/app/components/footer/footer.component.scss
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 #footer-container {
   text-align: center;
-  background-color: #fffde7;
+  background-color: var(--primary-color);
   padding: 0.5rem 0;
   border-top: 1px solid #fffde7;
   font-size: 0.75rem;
