--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.9rem;
-  background-color: #8bc34a;
+  background-color: var(--primary-color);
   position: relative;
   z-index: 1337;
 }
@@ -29,7 +29,7 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #007bff;
+  background-color: var(--tertiary-color);
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
