--- a/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
+++ b/apps/frontend-wte/src/app/components/random-generator/random-generator.component.scss
@@ -11,7 +11,7 @@
   margin-top: 5rem;
   margin-bottom: 5rem;
   text-align: center;
-  background-color: #f1f8e9;
+  background-color: var(--secondary-color);
   border-radius: 0.5rem;
   padding: 2rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
   padding: 0.5rem 1.5rem;
   font-size: 1rem;
   color: #ffffff;
-  background-color: #007bff;
+  background-color: var(--quaternary-color);
   border: none;
   border-radius: 0.5rem;
   text-decoration: none;
