--- a/apps/frontend-wte/src/app/components/recipe-thumbnail/recipe-thumbnail.component.scss
+++ b/apps/frontend-wte/src/app/components/recipe-thumbnail/recipe-thumbnail.component.scss
@@ -19,7 +19,7 @@
 
 #read-more-btn {
   background-color: #f0f0f0;
-  color: #000000;
+  background-color: var(--quaternary-color);
   font-weight: bold;
   border: none;
   padding: 0.25rem 0.75rem;
@@ -41,7 +41,7 @@
 }
 
 #full-recipe-btn {
-  background-color: #28a745;
+  background-color: var(--quaternary-color);
   margin-bottom: 0.5rem;
   display: inline-block;
   padding: 0.4rem 1rem;
