--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.scss
@@ -4,13 +4,13 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
-  background-color: #f9f9f9;
+  background-color: var(--primary-color);
 }
 
 #about-box {
   width: 100%;
   max-width: 40rem;
-  background-color: #ffffff;
+  background-color: var(--secondary-color);
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
