--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: flex-start;
   padding: 2rem;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
 }
 
 .recipe-box {
@@ -14,7 +14,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  background-color: #ffffff;
+  background-color: var(--secondary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
