--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.scss
@@ -3,7 +3,7 @@
   max-width: 50rem;
   margin: 2rem auto;
   border-radius: 1rem;
-  background-color: #f1f8e9;
+  background-color: var(--primary-color);
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 2rem;
@@ -53,7 +53,7 @@
 .steps,
 .cooking-time {
   flex: 1 1 calc(33.333% - 2rem);
-  background-color: #f9f9f9;
+  background-color: var(--secondary-color);
   border-radius: 0.5rem;
   padding: 1rem;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -99,7 +99,7 @@
   font-size: 1rem;
   font-weight: bold;
   color: #ffffff;
-  background-color: #007bff;
+  background-color: var(--quaternary-color);
   border-radius: 0.5rem;
   text-decoration: none;
   transition: background-color 0.2s, transform 0.2s;
