--- a/apps/frontend-webshop-wte/src/app/components/item-thumbnail/item-thumbnail.component.html
+++ b/apps/frontend-webshop-wte/src/app/components/item-thumbnail/item-thumbnail.component.html
@@ -1,13 +1,14 @@
 <div class="item-card">
-  <img class="item-image" src="{{ item.img }}" alt="{{ item.name }}">
-  <div class="item-content">
-      <h1 class="item-title">{{ item.name }}</h1>
-      <p class="item-description">{{ (item.description) }}</p>
-  </div>
-  <div class="item-details">
-      <span class="item-price">{{ item.price.amount }} / {{ item.price.unit }}</span>
-  </div>
-  <div id="view-item-container">
-      <a id="view-item-btn" [routerLink]="['/items', item.id]">View Details</a>
-  </div>
+    <img class="item-image" [src]="item.img" [alt]="item.name" />
+    <div class="item-content">
+        <h1 class="item-title">{{ item.name }}</h1>
+        <p class="item-description">{{ item.shortDescription }}</p>
+    </div>
+    <div class="item-details">
+        <span class="item-price">{{ item.price.amount }} / {{ item.price.unit }}</span>
+    </div>
+    <div class="item-buttons">
+        <a class="view-details-link" [routerLink]="['/items', item.id]">More Info</a>
+        <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
 </div>
