--- a/apps/frontend-webshop-wte/src/app/pages/item-list-page/item-page/item-page.component.html
+++ b/apps/frontend-webshop-wte/src/app/pages/item-list-page/item-page/item-page.component.html
@@ -3,8 +3,9 @@
     <div class="item-content">
         <h1 class="item-title">{{ item.name }}</h1>
         <p class="item-description">{{ item.description }}</p>
+        <p class="item-price">{{ item.price.amount }} € / {{ item.price.unit }}</p>
     </div>
     <div id="back-to-items-container">
-        <a id="back-to-items-btn" (click)="goBack()">Go Back</a>
+        <a id="back-to-items-btn">Add to Cart</a>
     </div>
 </div>
